--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -3,12 +3,12 @@
     justify-content: center;
     align-items: center;
 
-    & .item {
+    .item {
         width: 170px;
         height: 90px;
     }
 
-    & .item+.item {
+    .item+.item {
         margin-left: 30px;
     }
 }
