--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,58 +1,3 @@
-html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
-body {
-  background-color: #ffffff;
-  color: #757575;
-  font-family: Roboto, sans-serif;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03rem;
-}
-
-a {
-  text-decoration: none;
-}
-
-footer {
-  background-color: #2f303a;
-}
-
-figure {
-  margin: 0;
-  padding: 0;
-}
-
-.link:hover,
-.link:focus {
-  color: #2196f3;
-}
-
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.text-style-bold {
-  font-weight: 700;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 94px 15px 94px 15px;
-}
-
 /*! modern-normalize v0.7.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -303,7 +248,66 @@ summary {
   display: list-item;
 }
 
-header > .container {
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body {
+  background-color: #ffffff;
+  color: #757575;
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+footer {
+  background-color: #2f303a;
+}
+
+figure {
+  margin: 0;
+  padding: 0;
+}
+
+.link:hover,
+.link:focus {
+  color: #2196f3;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.text-style-bold {
+  font-weight: 700;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 94px 15px 94px 15px;
+}
+
+header {
+  border-bottom: 1px solid #ECECEC;
+}
+
+header .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -436,7 +440,7 @@ header > .container {
 
 .hero {
   display: inline-block;
-  margin: 200px auto 30px 0px;
+  margin: 200px auto 30px 0;
   padding: 0;
   font-weight: 900;
   font-size: 44px;
@@ -454,6 +458,10 @@ header > .container {
   background-color: #2196f3;
   font-size: 16px;
   line-height: 1.87;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .background-icon {
@@ -569,9 +577,9 @@ header > .container {
   padding: 0;
   padding-bottom: 24px;
   background-color: #ffffff;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  border-radius: 0px 0px 4px 4px;
+  -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0 0 4px 4px;
 }
 
 .employees .item:not(:last-child) {
@@ -736,7 +744,7 @@ footer .container {
 .logo-footer {
   margin: 45px 147px 8px 0;
   color: #ffffff;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 26px;
   line-height: 1.19;
 }
@@ -751,7 +759,7 @@ footer .container {
 
 .for-align {
   width: 300px;
-  padding-top: 0px;
+  padding-top: 0;
   padding-bottom: 0;
 }
 
@@ -773,7 +781,7 @@ footer .container {
 }
 
 .footer-social-networks > .item {
-  margin-left: 0px;
+  margin-left: 0;
   margin-right: auto;
   padding-left: 0;
 }
@@ -794,8 +802,8 @@ footer .container {
   padding-left: 29px;
   background-color: #2196F3;
   color: #ffffff;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 4px;
   font-size: 16px;
@@ -818,7 +826,6 @@ footer .container {
   text-align: center;
   font-size: 12px;
   line-height: 2;
-  text-align: center;
 }
 
 .container-filter {
@@ -835,6 +842,10 @@ footer .container {
           justify-content: center;
 }
 
+.filter-list .item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .filter {
   padding: 6px 22px;
   font-weight: 500;
@@ -849,17 +860,13 @@ footer .container {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter.item:not(:last-child) {
-  margin-right: 8px;
-}
-
 .curent-filter,
 .link-filter:hover,
 .link-filter:focus {
   background-color: #2196f3;
   color: #ffffff;
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.08), 0 3px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.08), 0 3px 1px rgba(0, 0, 0, 0.1);
 }
 
 .container-portfolio {
@@ -953,8 +960,8 @@ footer .container {
 
 .portfolio-list .item:hover,
 .portfolio-list .item:focus {
-  -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-          box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
+          box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .backdrop {
@@ -964,7 +971,7 @@ footer .container {
   width: 100%;
   height: 100%;
   overflow-x: auto;
-  overflow-y: sc;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -989,6 +996,10 @@ textarea {
   /* border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px; */
   margin-bottom: 28px;
+}
+
+.form-field:nth-of-type(4) {
+  margin-bottom: 20px;
 }
 
 .form-label {
@@ -1108,8 +1119,8 @@ textarea {
   background-color: #ffffff;
   border-radius: 4px;
   border: 1px solid #2196F3;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
 }
 
 .closed-modal {
@@ -1194,7 +1205,7 @@ textarea {
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
 }
 /*# sourceMappingURL=main.css.map */
