--- a/SASS/components/_page-header.scss
+++ b/SASS/components/_page-header.scss
@@ -1,15 +1,19 @@
-header>.container {
-    display: flex;
-    align-items: center;
-    margin: 0 auto 0 auto;
-    padding: 0 15px;
+header {
+    border-bottom: 1px solid #ECECEC;
+
+    .container {
+        display: flex;
+        align-items: center;
+        margin: 0 auto 0 auto;
+        padding: 0 15px;
+    }
 }
 
 .site-nav {
     display: flex;
     margin-left: 85px;
 
-    & .item:not(:last-child) {
+    .item:not(:last-child) {
         margin-right: 50px;
     }
 }
@@ -19,7 +23,7 @@ header>.container {
     display: flex;
     margin-left: auto;
 
-    & .item+.item {
+    .item+.item {
         margin-left: 30px;
     }
 }
