--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -10,7 +10,7 @@
 
 .hero {
     display: inline-block;
-    margin: 200px auto 30px 0px;
+    margin: 200px auto 30px 0;
     padding: 0;
     font-weight: 900;
     font-size: 44px;
@@ -28,6 +28,13 @@
     background-color: $accent-color;
     font-size: 16px;
     line-height: 1.87;
+
+    border: none;
+    border-radius: 4px;
+
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+
+
 }
 
 
