--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -2,20 +2,20 @@ footer {
 
     margin: 0 auto;
 
-    & address {
+    address {
         display: flex;
         flex-direction: column;
     }
 
-    & .container {
+    .container {
         display: flex;
     }
 
-    & .but-social-net {
+    .but-social-net {
         background-color: rgba(255, 255, 255, 0.1);
     }
 
-    & .container {
+    .container {
         display: flex
     }
 }
@@ -26,7 +26,7 @@ footer {
     margin: 45px 147px 8px 0;
 
     color: $white-text;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 26px;
     line-height: 1.19;
 }
@@ -43,7 +43,7 @@ footer {
 .for-align {
 
     width: 300px;
-    padding-top: 0px;
+    padding-top: 0;
     padding-bottom: 0;
 }
 
@@ -67,7 +67,7 @@ footer {
 
 
 .footer-social-networks>.item {
-    margin-left: 0px;
+    margin-left: 0;
     margin-right: auto;
     padding-left: 0;
 }
