--- a/sass/components/_subscribe-button.scss
+++ b/sass/components/_subscribe-button.scss
@@ -11,7 +11,7 @@
     background-color: #2196F3;
     color: $button-text;
 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
     border: none;
     border-radius: 4px;
 
