--- a/sass/components/modal/_backdrop.scss
+++ b/sass/components/modal/_backdrop.scss
@@ -1,20 +1,18 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-    width: 100%;
-    height: 100%;
-    overflow-x: auto;
-    overflow-y: sc;
+  width: 100%;
+  height: 100%;
+  overflow-x: auto;
+  overflow-y: auto;
 
-    background-color: rgba(0, 0, 0, 0.2);
-
-
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
