--- a/sass/components/modal/_form-modal.scss
+++ b/sass/components/modal/_form-modal.scss
@@ -10,6 +10,11 @@ textarea {
     margin-bottom: 28px;
 }
 
+.form-field:nth-of-type(4) {
+    margin-bottom: 20px;
+}
+
+
 .form-label {
     position: absolute;
     transform: translateY(-50%);
