--- a/sass/components/modal/_modal.scss
+++ b/sass/components/modal/_modal.scss
@@ -14,9 +14,9 @@
     border-radius: 4px;
     border: 1px solid #2196F3;
 
-    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2),
-        0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 1px 3px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2),
+        0 1px 1px rgba(0, 0, 0, 0.14),
+        0 1px 3px rgba(0, 0, 0, 0.12);
 
 }
 
@@ -105,5 +105,5 @@
     color: $button-text;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
 }
