--- a/sass/components/portfolio/_filter-portfolio.scss
+++ b/sass/components/portfolio/_filter-portfolio.scss
@@ -7,6 +7,10 @@
     display: flex;
     justify-content: center;
 
+    .item:not(:last-child) {
+        margin-right: 8px;
+    }
+
 }
 
 .filter {
@@ -22,9 +26,6 @@
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &.item:not(:last-child) {
-        margin-right: 8px;
-    }
 }
 
 
@@ -34,7 +35,7 @@
 .link-filter:focus {
     background-color: $accent-color;
     color: $button-text;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12),
-        0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 3px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.12),
+        0 1px 2px rgba(0, 0, 0, 0.08),
+        0 3px 1px rgba(0, 0, 0, 0.1);
 }
