--- a/sass/components/portfolio/_portfolio-section.scss
+++ b/sass/components/portfolio/_portfolio-section.scss
@@ -68,26 +68,26 @@
     display: flex;
     flex-wrap: wrap;
 
-    & .item {
+    .item {
         width: calc((100% - 60px) / 3);
         margin-right: 30px;
         margin-bottom: 30px;
         border: 1px solid #EEEEEE;
     }
 
-    & .item:nth-child(3n) {
+    .item:nth-child(3n) {
         margin-right: 0px;
     }
 
-    & .item:nth-last-child(-n + 3) {
+    .item:nth-last-child(-n + 3) {
         margin-bottom: 0px;
     }
 
-    & .item:hover,
-    & .item:focus {
+    .item:hover,
+    .item:focus {
         box-shadow:
             1px 4px 6px rgba(0, 0, 0, 0.16),
-            0px 4px 4px rgba(0, 0, 0, 0.06),
-            0px 1px 1px rgba(0, 0, 0, 0.12);
+            0 4px 4px rgba(0, 0, 0, 0.06),
+            0 1px 1px rgba(0, 0, 0, 0.12);
     }
 }
