--- a/sass/components/portfolio/_filter-portfolio.scss
+++ b/sass/components/portfolio/_filter-portfolio.scss
@@ -19,7 +19,7 @@
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
-    color: var(--title-text-color);
+    color: $title-text-color;
     background-color: #f5f4fa;
     border: none;
     border-radius: 4px;
