--- a/sass/components/modal/_form-modal.scss
+++ b/sass/components/modal/_form-modal.scss
@@ -46,7 +46,7 @@ textarea {
 .form-field {
     position: relative;
 
-    & textarea {
+    textarea {
         padding: 12px 16px;
         height: 120px;
     }
