--- a/sass/components/modal/_modal.scss
+++ b/sass/components/modal/_modal.scss
@@ -73,7 +73,7 @@
     padding: 0;
 
     background: #188CE8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
     border: none;
     border-radius: 4px;
 
