--- a/CSS/main.css
+++ b/CSS/main.css
@@ -634,8 +634,8 @@ header .container {
   width: 44px;
   height: 44px;
   padding: 0;
-  margin: 16px 0px 0 0;
-  border: 0px;
+  margin: 16px 0 0 0;
+  border: 0;
   border-radius: 50%;
   background-color: #ffffff;
   fill: #afb1b8;
@@ -951,11 +951,11 @@ footer .container {
 }
 
 .portfolio-list .item:nth-child(3n) {
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .portfolio-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .portfolio-list .item:hover,
