--- a/sass/components/_social-networks.scss
+++ b/sass/components/_social-networks.scss
@@ -23,9 +23,9 @@
     height: 44px;
 
     padding: 0;
-    margin: 16px 0px 0 0;
+    margin: 16px 0 0 0;
 
-    border: 0px;
+    border: 0;
     border-radius: 50%;
     background-color: $primary-background-color;
     fill: #afb1b8;
