--- a/sass/components/portfolio/_portfolio-section.scss
+++ b/sass/components/portfolio/_portfolio-section.scss
@@ -76,11 +76,11 @@
     }
 
     .item:nth-child(3n) {
-        margin-right: 0px;
+        margin-right: 0;
     }
 
     .item:nth-last-child(-n + 3) {
-        margin-bottom: 0px;
+        margin-bottom: 0;
     }
 
     .item:hover,
