--- a/sass/components/_command-section.scss
+++ b/sass/components/_command-section.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
 
-    &>.item {
+    >.item {
         margin: 0;
         padding: 0;
         padding-bottom: 24px;
@@ -19,7 +19,7 @@
         border-radius: 0 0 4px 4px;
     }
 
-    & .item:not(:last-child) {
+    .item:not(:last-child) {
         margin-right: 30px;
     }
 }
